# 2021_Hanium_Home_Training_AR_Glass

./: .gitattributes  .gitignore  README.md  README.md.gitlab
Docs/: 2021 한이음 공모전 - 제작설계서.pptx
PI_main/devel/: setup.sh
PI_main/devel/lib/image_transport/: list_transports  republish
PI_main/devel/lib/pkgconfig/: compressed_depth_image_transport.pc  compressed_image_transport.pc  cv_bridge.pc  webcam.pc
PI_main/devel/lib/theora_image_transport/: ogg_saver
PI_main/devel/lib/webcam/: webcam_pub
PI_main/src/webcam/: CMakeLists.txt
PI_main/src/webcam/script/: autoscript.sh  changefile.sh
PI_main/src/webcam/src/: pub1.cpp  pub2.cpp
PI_package/devel/: .catkin  local_setup.sh
PI_package/devel/include/compressed_depth_image_transport/: CompressedDepthPublisherConfig.h
PI_package/devel/include/compressed_image_transport/: CompressedPublisherConfig.h  CompressedSubscriberConfig.h
PI_package/devel/include/theora_image_transport/: TheoraPublisherConfig.h
PI_package/devel/lib/image_transport/: list_transports  republish
PI_package/devel/lib/pkgconfig/: compressed_depth_image_transport.pc  compressed_image_transport.pc  cv_bridge.pc  image_transport.pc  theora_image_transport.pc  webcam.pc
PI_package/devel/lib/theora_image_transport/: ogg_saver
PI_package/devel/lib/webcam/: webcam_pub  webcam_pub2
PI_package/script/: clean.sh
PI_package/src/webcam/: CMakeLists.txt
PI_package/src/webcam/src/: pub.cpp  puboop.cpp
Project/PI_main/devel/: .catkin  .rosinstall
Project/PI_main/src/cv_bridge/: CMakeLists.txt
Project/TX2_main/JSON/: 0.json  1.json  13.json  17.json  20.json  24.json  3.json  31.json  39.json  41.json  44.json  5.json  50.json  6.json
Project/TX2_main/JSON_backup/: 12.json  14.json  17.json  24.json  3.json  30.json  32.json  34.json  38.json  4.json  40.json  41.json  42.json  7.json
Project/TX2_main/backup/: fitness_json_parcing.py  json_parsing.py  target.json  youtube_parcer.py
Project/TX2_main/devel/: .catkin  local_setup.sh  setup.sh
Project/TX2_main/script/: clean.sh  image_clean.sh
Project/TX2_main/src/socket/: CMakeLists.txt
ROS_COMM/: README.md
ROS_COMM/catkin_ws/devel/: .catkin  .rosinstall
ROS_COMM/image_transport_ws/devel/: .catkin  setup.sh
ROS_COMM/image_transport_ws/src/: image_transport_tutorial
ROS_COMM/image_transport_ws/src/learning_image_transport/: CMakeLists.txt  package.xml
ROS_COMM/transport_ws/devel/: .catkin  local_setup.sh
ROS_COMM/transport_ws/src/: CMakeLists.txt.swap  image3
ROS_COMM/transport_ws/src/pub/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
ROS_COMM/transport_ws/src/pub/src/: .p.cpp.swp  p.cpp  p.cpp.backup  p2.cpp  s.cpp
RPI/image_pub/devel/: .catkin  setup.sh
RPI/image_pub/src/cv_bridge/: CMakeLists.txt
RPI/image_pub/src/image_transport/: CMakeLists.txt
RPI/image_pub/src/pub/: .package.xml.swp  CMakeLists.txt  package.xml  pub.cpp
RPI/image_transport/devel/: local_setup.sh
RPI/image_transport/src/pub/: .CMakeLists.txt.swp  .package.xml.swo  CMakeLists.txt
RPI/image_transport/src/pub/src/: p.cpp
RPI/image_transport/src/sub/: CMakeLists.txt
RPI/image_transport/src/webcam/: package.xml  pub.cpp  sub.cpp  sub1.cpp
RosSharp_Unity/Scripts/RosBridgeClient/RosCommuncation/: KeypointSubscriber.cs
TX2_main/: cat  test  test.cpp  test.txt
TX2_main/JSON/: 10.json  11.json  12.json  14.json  15.json  16.json  18.json  19.json  2.json  21.json  22.json  23.json  25.json  26.json  27.json  28.json  29.json  30.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  42.json  43.json  45.json  46.json  47.json  48.json  49.json  7.json  8.json  9.json
TX2_main/JSON_backup/: 0.json  1.json  11.json  18.json  19.json  20.json  21.json  22.json  23.json  25.json  26.json  31.json  49.json  5.json  50.json  8.json
TX2_main/backup/: test.cpp
TX2_main/devel/: .catkin
TX2_main/devel/include/Exercise/: Exercise.h  Keypoints.h
TX2_main/devel/include/msg_creator/: Exercise.h  Keypoints.h
TX2_main/devel/include/rosapi/: DeleteParamResponse.h  GetActionServersRequest.h  GetActionServersResponse.h  GetParamNamesRequest.h  GetParamResponse.h  GetTimeRequest.h  GetTimeResponse.h  HasParamResponse.h  MessageDetailsResponse.h  NodeDetailsResponse.h  NodesRequest.h  NodesResponse.h  PublishersRequest.h  PublishersResponse.h  SearchParamRequest.h  SearchParamResponse.h  ServiceNodeResponse.h  ServiceProvidersRequest.h  ServiceProvidersResponse.h  ServiceRequestDetailsRequest.h  ServiceRequestDetailsResponse.h  ServiceResponseDetailsRequest.h  ServiceTypeRequest.h  ServicesForTypeRequest.h  ServicesForTypeResponse.h  ServicesRequest.h  ServicesResponse.h  SetParamRequest.h  SetParamResponse.h  SubscribersRequest.h  SubscribersResponse.h  TopicTypeRequest.h  TopicsRequest.h  (+5 more)
TX2_main/script/: .clean.sh.swp
TX2_main/src/: target.json  test  test.cpp
TX2_main/src/Exercise/: CMakeLists.txt  package.xml
TX2_main/src/Exercise/msg/: .Exercise.msg.swp
TX2_main/src/cv_bridge/: CMakeLists.txt
TX2_main/src/msg_creator/: CMakeLists.txt
TX2_main/src/msg_creator/msg/: Exercise.msg  Keypoints.msg
TX2_main/src/socket/: CMakeLists.txt  package.xml
TX2_main/src/socket/JSON/: 10.json  13.json  27.json  28.json  35.json  36.json  37.json  43.json  9.json
TX2_main/src/socket/include/: Keypoints.msg
TX2_main/src/socket/src/: .tx2_publisher.cpp.swp  .tx2_realpub.cpp.swo  .tx2_realpub.cpp.swp  tx2_publisher.cpp  tx2_realpub.cpp  tx2_realpub.cpp.backup  tx2_realsub.cpp  tx2_realsub.cpp.backup
TX2_main/src/webcam/: CMakeLists.txt
TX2_main/src/webcam/src/: sub.cpp
image_transport/devel/: .catkin  local_setup.sh  setup.sh
image_transport/script/: tx2_update.sh
image_transport/src/webcam/: .sub1.cpp.swp  CMakeLists.txt  CMakeLists.txt.TX2  pub.cpp
image_transport/src/webcam/src/: pub.cpp
socket_comm/devel/: .catkin  .rosinstall
socket_comm/src/json_publisher/: CMakeLists.txt  package.xml
socket_comm/src/json_publisher/src/: tx2_publisher.cpp
socket_comm/src/msg_creator/: CMakeLists.txt
(+365 files in other folders)
