<?xml version="1.0"?>
<package format="2">
	<name>Exercise</name>
	<version>0.1.0</version>
	<description>msg_creator for Keypoints</description>
	<maintainer email="kkj3853@gmail.com">Kyung</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<build_depend>msessage_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
