<?xml version="1.0"?>
<package format="2">
	<name>socket</name>
	<version>1.0.0</version>
	<description>TX2 to Unity Websocket Communication</description>
	<maintainer email="kkj3853@gmail.com">Kyung</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>
	<build_depend>msg_creator</build_depend>
	<build_export_depend>msg_creator</build_export_depend>
	<exec_depend>msg_creator</exec_depend>
</package>
